Now changing the array changes the database

--- a/mainGame/templates/mainGame/gamePageOChallenger.html
+++ b/mainGame/templates/mainGame/gamePageOChallenger.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Original Defender</title>
+    <title> O DEFENDER</title>
 </head>
-<style>
-</style>
+<style>body { background-color: #000000b3; }</style>
 <body>
    <P>THIS IS Original Defender</P>
     <p> Generated Code: {{ game_code }}</p>
